# aech-cli-documents

./: README.md  main.py  manifest.json  pyproject.toml  requirements.txt
aech_cli_documents/: __init__.py  main.py  manifest.json
aech_cli_documents/corpus/: __init__.py  chunker.py  database.py  embeddings.py  enrichment.py  expansion.py  models.py  pdf_inspector.py  search.py  structure.py  vlm.py
docs/: CLI_MANIFEST_SPEC.md  RLM_BRAINSTORM_2026-01-28.md  rlm_brainstorm_notes.md
tests/: test_embeddings.py  test_pdf_inspector.py
